[project]
name = "git-bak"
version = "0.1.0"
description = "Git-Bak is a backup/restore cli for local Git repositories."
readme = "README.md"
authors = [
    { name = "Kasper Hojbjerg" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
git-bak = "git_bak.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
